Updated tempate with .svg and _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
+title: basics book template
 author: basics
-logo: logo.png
+logo: logo.svg
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -21,12 +21,33 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/Basics2022/bbooks-template  # Online location of your book
+  path_to_book: docs                                  # Optional path to your book, relative to the repository root
+  branch: master                                      # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
+  home_page_in_navbar: True
   use_issues_button: true
   use_repository_button: true
+  extra_navbar: ""
+
+# sphinx extensions
+sphinx:
+  config:
+    language: it
+    html_theme_options:
+      # repository_url:: https://github.com/Basics2022/bbooks-physics-hs  # Online location of your book
+      # use_repository_button: True
+      # use_edit_page_button: True
+      logo:
+        image_light: logo.svg
+        image_dark: logo-dark.svg
+    html_favicon: favicon.svg
+  extra_extensions:
+    - sphinx_proof
+    - sphinx_exercise
+    # - sphinx_togglebutton   # to be installed
+
+
